--- a/index.html
+++ b/index.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MelonTec Cloud</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>MelonTec Cloud</title>
+<link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header>
-        <div class="account-btn">
-            <button onclick="window.location.href='login.html'">Account</button>
-        </div>
-    </header>
-    
-    <div class="container">
-        <div class="app-card">
-            <h2>FOTOS</h2>
-        </div>
-        <div class="app-card">
-            <h2>VIDEOS</h2>
-        </div>
-        <div class="app-card">
-            <h2>NOTIZEN</h2>
-        </div>
-        <div class="app-card">
-            <h2>APPS</h2>
-            <div class="app-item">
-                <p>Kalender</p>
-            </div>
-        </div>
-    </div>
 
-    <script src="app.js"></script>
+<body>
+<header>
+  <div class="account" id="accountBtn">Account</div>
+</header>
+
+<main class="grid">
+  <div class="card fotos">FOTOS</div>
+  <div class="card videos">VIDEOS</div>
+  <div class="card notes">NOTIZEN</div>
+  <div class="card apps">
+    <h3>APPS</h3>
+    <span>Kalender</span>
+  </div>
+</main>
+
+<script src="app.js"></script>
 </body>
 </html>
+
 
