--- a/login.html
+++ b/login.html
@@ -7,13 +7,15 @@
 </head>
 <body>
 
-<div class="card" style="width:340px;margin:100px auto;flex-direction:column;">
-<h2>Login</h2>
-<input id="email" placeholder="E-Mail">
-<input id="password" type="password" placeholder="Passwort">
-<button onclick="login()">Anmelden</button>
+<div class="glass card">
+  <h2>Login</h2>
+  <input id="email" placeholder="E-Mail">
+  <input id="password" type="password" placeholder="Passwort">
+  <button onclick="login()">Anmelden</button>
+  <p><a href="register.html">Registrieren</a></p>
 </div>
 
+<script src="supabase.js"></script>
 <script src="auth.js"></script>
 </body>
 </html>
