--- a/login.html
+++ b/login.html
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Login</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<div class="glass card">
-  <h2>Login</h2>
-  <input id="email" placeholder="E-Mail">
-  <input id="password" type="password" placeholder="Passwort">
-  <button onclick="login()">Anmelden</button>
-  <p><a href="register.html">Registrieren</a></p>
-</div>
+<input id="email" placeholder="Email">
+<input id="password" type="password" placeholder="Passwort">
+<button onclick="login()">Login</button>
 
 <script src="supabase.js"></script>
 <script src="auth.js"></script>
-</body>
-</html>
